# flow_class

./: .gitignore  README.md  flow_class_workflow.py  pyproject.toml
src/flow_class/: flow_classification.py
tests/: test_flowclass.py
tests/ADEQ_FlowRegimes_Test/: Flow_Regimes.py
tests/ADEQ_FlowRegimes_Test/Flow_Regimes.gdb/: a00000001.TablesByName.atx  a00000004.freelist  a00000004.gdbtablx  a00000005.CatItemTypesByUUID.atx  a00000005.gdbtable  a00000005.gdbtablx  a00000006.CatRelsByOriginID.atx  a00000006.CatRelsByType.atx  a00000006.freelist  a00000006.gdbtable  a00000007.CatRelTypesByBackwardLabel.atx  a00000007.CatRelTypesByForwardLabel.atx  a00000007.CatRelTypesByOriginItemTypeID.atx  a00000007.gdbtablx  a00000045.gdbtable  a00000045.gdbtablx  a00000060.freelist  a00000060.gdbindexes  a00000062.WBID.atx  a00000062.freelist  a00000062.gdbindexes  a00000062.gdbtable  a00000062.gdbtablx
tests/ADEQ_FlowRegimes_Test2/Flow_Regimes.gdb/: a00000001.freelist  a00000001.gdbtable  a00000001.gdbtablx  a00000003.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.freelist  a00000004.gdbtablx  a00000004.spx  a00000005.CatItemTypesByName.atx  a00000005.CatItemTypesByParentTypeID.atx  a00000006.CatRelsByDestinationID.atx  a00000006.FDO_UUID.atx  a00000006.gdbtablx  a00000007.CatRelTypesByDestItemTypeID.atx  a00000007.CatRelTypesByName.atx  a00000007.CatRelTypesByUUID.atx  a00000007.gdbtable  a00000026_temp.gdbtablx  a00000060.WBID.atx  a00000060.gdbtablx  a00000060.spx  a00000062.WBID.atx  a00000062.freelist  a00000062.gdbtable  a00000062.gdbtablx  timestamps
