[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flow_class"
version = "0.0.1"
authors = [
  { name="Example" },
]
description = "Flow classification"
readme = "README.md"
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]




